--- a/src/css/editor_chrome.css
+++ b/src/css/editor_chrome.css
@@ -3,22 +3,22 @@
 }
 
 /* Add the subtle gradient to the editor background */
-.monaco-editor {
+/* .monaco-editor {
   background-color: transparent !important;
   background-image: linear-gradient(to bottom, #2a2139 75%, #34294f);
   background-size: auto 100vh;
   background-position: top;
   background-repeat: no-repeat;
-}
+} */
 
 /* Sweet sunset dots */
-.monaco-workbench .activitybar>.content .monaco-action-bar .badge .badge-content {
+/* .monaco-workbench .activitybar>.content .monaco-action-bar .badge .badge-content {
   background: linear-gradient(to bottom, #fff951 25%, #fc28a8);
-}
+} */
 
 /* Active tab neon */
 .monaco-workbench .part.editor>.content .editor-group-container>.title .tabs-container>.tab.sizing-fit.active {
-  box-shadow: inset 0 -5px 25px #fc28a825;
+  /* box-shadow: inset 0 -5px 25px #fc28a825; */
   position: relative;
 }
 
@@ -49,7 +49,7 @@
 
 /* Active sidebar item */
 .monaco-workbench .activitybar>.content .monaco-action-bar .action-item.checked {
-  box-shadow: inset 0 -5px 25px #fc28a825;
+  /* box-shadow: inset 0 -5px 25px #fc28a825; */
   position: relative;
 }
 
